# algorandanalytics

./: .gitignore  README.md  Report.docx  pyproject.toml
algorandanalytics/: app.py
algorandanalytics/modules/: io.py  query.py  report.py
modules/: query.py
tests/: test_functions.py
