[tool.poetry]
name = "algorandanalytics"
version = "0.1.0"
description = ""
authors = ["josephlavelle <josephlavelle99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.24.3"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
